--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
 base58==1.0.3
+bitcoin==1.1.39
+blockcypher==1.0.73
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+colored==1.3.93
 ecdsa==0.13
 Flask==1.0.2
-matplotlib==3.0.2
-numpy==1.16.1
-requests==2.21.0
+Flask-API==1.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+python-dateutil==2.2
+requests==2.4.3
+six==1.12.0
+termcolor==1.1.0
 tinydb==3.12.2
+urllib3==1.24.1
+Werkzeug==0.14.1
